# aep-hackoh-2024

./: .gitignore
aep-challange/: README.md  pyproject.toml
aep-challange/aep_challange/models/: datacleaning1.py  llmresponses.py  load_pdf.py  prompt_model.py  vadersentiment.py
aep-challange/aep_challange/notebooks/: analyze_data.ipynb
aep-challange/aep_challange/notebooks/.ipynb_checkpoints/: analyze_data-checkpoint.ipynb
aep-challange/aep_challange/utils/: clean_text.py  datacleaning1.py  file_factory.py  pre_process_data.py  read_csv.py
