[tool.poetry]
name = "aep-challange"
version = "0.1.0"
description = ""
authors = ["Jacob Cohen <79770350+jacob187@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
