[tool.poetry]
name = "aep-challange"
version = "0.1.0"
description = ""
authors = ["Jacob Cohen <79770350+jacob187@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
nltk = "^3.9.1"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
pypdf2 = "^3.0.1"
pypdf = "^5.0.1"
rapidocr-onnxruntime = "^1.3.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
